--- a/index.html
+++ b/index.html
@@ -71,17 +71,17 @@
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
                         <a href="">
-                            <img src="../images/图层 1.png" alt="">
+                            <img src="./images/图层 1.png" alt="">
                         </a>
                     </div>
                     <div class="swiper-slide">
                         <a href="">
-                            <img src="../images/图层 1.png" alt="">
+                            <img src="./images/图层 1.png" alt="">
                         </a>
                     </div>
                     <div class="swiper-slide">
                         <a href="">
-                            <img src="../images/图层 1.png" alt="">
+                            <img src="./images/图层 1.png" alt="">
                         </a>
                     </div>
                 </div>
